--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,9 +39,19 @@ jobs:
           ruby-version: "3.1"
           bundler-cache: true
 
-      - run: docker build --file dockerfiles/${DOCKERFILE}.dockerfile --tag isucon-itamae:latest .
-        env:
-          DOCKERFILE: ${{ matrix.dockerfile }}
+      # c.f. https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#cache-backend-api
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: docker build
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: dockerfiles/${{ matrix.dockerfile }}.dockerfile
+          push: false
+          tags: isucon-itamae:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - run: docker run --privileged -d --name isucon-itamae_app_1 isucon-itamae:latest /sbin/init
 
