--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,13 @@
 
 version: 2
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weekly
+    assignees:
+      - sue445
+
   - package-ecosystem: bundler
     directory: "/"
     schedule:
