--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -98,7 +98,7 @@ jobs:
 
       - run: .github/workflows/build_ruby.sh
         env:
-          XBUILD_RUBY_VERSION: 3.4-dev
+          XBUILD_RUBY_VERSION: ruby-dev
 
       - name: Print build log when build is failed
         run:  cat /tmp/*.log
