--- a/node.yml
+++ b/node.yml
@@ -4,8 +4,7 @@ xbuild:
 
 ruby:
   # xbuildでインストールするRubyのバージョン
-  # version: 3.1.2
-  version: 3.4-dev
+  version: ruby-dev
 
   # YJITを有効にしていビルドするかどうか(3.2.0-dev以降必須)
   enabled_yjit: true
